 
 GRAS:
 * New function: void gras_cpu_burn(double flops) -- a simple CPU burner

 XBT:
 * New function: xbt_dynar_dopar(dynar,fun) to map a function over the
   dynar with one separate thread per value of the dynar.
 * Change the prototype of xbt_thread_create(), sorry. 
   Added a boolean parameter indicating whether we want to join this
   thread (used in SG only for now)
   
 Bug fixes:
 * GTNetS wrappers should now be usable again (and betterly tested too)
 * Fix a major regression from 3.2 where the timeout provided to
   MSG_task_put_with_timeout() was used as absolute time before which
   the comm should be done.
 * Start to fix the <cluster> tag. 
   - Internal links should be good now (beside of the loopback, which
     use the private link instead)
   - paths to the external world is still rather broken
   - the <route:multi> tag is just broken. Actually that's brain-dead.
     We need sth like <route:multi src="myCluster" dst="$*-${myCluster}">
     to make it less stupid
   ** Check your platform with teshsuite/simdag/platforms/flatifier **
 * Fix a source-level compatibility glitch from 3.2: after defining
   MSG_USE_DEPRECATED, you can use the old name
   MSG_task_put_with_time_out() for MSG_task_put_with_timeout()
 * Allow to compile from the SVN with automake 1.11
 * Fix some problems when using the "start_time" tag in deployment XMLs.

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr> 

SimGrid (3.3.3) stable; urgency=low

 The "Need for Speed" release.
 
 The timings done to validate the 3.3.2 were faulty. 
 Instead of being 5% faster, it was 15% slower (compared to 3.3.1).
   
 The problem was a conversion from a manually handled vector to
   xbt_dynar_t on the critical path. 
 xbt_dynar_foreach calls functions, inducing stack management crap.

 We inlined these functions and xbt_dynar_foreach is now breath taking.
 We also inlined xbt_swag_belong on the way.

 Here are some approximate speedup measurements (on master/slaves